k8s-specifications/2-Observability-Setup-Deployment/2-Prometheus-sre/1-kubernetes-prometheus/3-prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: observability-sre
  labels:
    app: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
            - "--storage.tsdb.retention.time=1h"
            - "--web.console.templates=/etc/prometheus/consoles"
            - "--web.console.libraries=/etc/prometheus/console_libraries"
            - "--web.enable-lifecycle"
            - "--web.route-prefix=/"
            - "--enable-feature=exemplar-storage"
            - "--enable-feature=otlp-write-receiver"
            - "--web.enable-remote-write-receiver"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: prometheus-storage-volume
          emptyDir: {}
