k8s-specifications/2-Observability-Setup-Deployment/2-Prometheus-sre/1-kubernetes-prometheus/4-prometheus-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: observability-sre
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
spec:
  selector:
    app: prometheus-server
  type: LoadBalancer
  ports:
    - port: 9090         # Exposed service port
      targetPort: 9090   # Pod container port
