k8s-specifications/2-Observability-Setup-Deployment/2-Prometheus-sre/1-kubernetes-prometheus/5-prometheus-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: observability-sre
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
  
spec:
  selector: 
    app: prometheus-server
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 9090 
      nodePort: 30000
